v 0.0.6 : fix: loader container + suppression scrollbars + icone play

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,16 @@ input:checked + .slider:before {
     background-color: #1d1d1d;
     overflow-y: scroll;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.modal-div::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.modal-div {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
 
 .modal-inner-div {
     box-sizing: border-box;
