--- a/js/layout/pages/pages.css
+++ b/js/layout/pages/pages.css
@@ -21,6 +21,16 @@
     padding: 0;
     overflow-y: scroll;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.page::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.page {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
 
 .sliding-page {
     /* position: absolute; */
