--- a/js/layout/pages/radio/radio.style.css
+++ b/js/layout/pages/radio/radio.style.css
@@ -188,6 +188,22 @@
     z-index: 50;
     box-sizing: border-box;
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    background-color: #0000009f;
+}
+
+.loader-sub-container {
+    box-sizing: border-box;
+    position: absolute;
     bottom: 22vh;
     display: flex;
     flex-direction: column;
